fix: CSS colors for some color themes were hard to read

--- a/mknodes/resources/css/timeline.css
+++ b/mknodes/resources/css/timeline.css
@@ -56,7 +56,8 @@ html, body {
   width: 45%;
   padding: 10px 30px;
   border-radius: 4px;
-  background: {{ theme.css_primary_bg_light }};
+  color: {{ theme.css_default_fg }};
+  background: {{ theme.css_default_bg }};
   box-shadow: 0 20px 25px -15px rgba(0, 0, 0, 0.3);
 }
 .timeline-content::after {
